@@ -1,6 +1,7 @@
 package arsw.wherewe.back.arepalocations.service;
 
-import arsw.wherewe.back.arepalocations.model.FavoritePlace;
+import arsw.wherewe.back.arepalocations.dto.FavoritePlaceDTO;
+import arsw.wherewe.back.arepalocations.dto.PushTokenDTO;
 import arsw.wherewe.back.arepalocations.model.LocationMessage;
 import arsw.wherewe.back.arepalocations.model.PushToken;
 import arsw.wherewe.back.arepalocations.repository.PushTokenRepository;
@@ -8,8 +9,9 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.io.OutputStream;
+import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -17,28 +19,52 @@ import java.util.Map;
 @Service
 public class NotificationService {
 
-    @Autowired
     private PushTokenRepository pushTokenRepository;
 
-    @Autowired
     private FavoritePlaceService favoritePlaceService;
 
     private final Map<String, Map<String, Boolean>> userPlaceStatus = new HashMap<>();
 
+    @Autowired
+    public NotificationService(PushTokenRepository pushTokenRepository, FavoritePlaceService favoritePlaceService) {
+        this.pushTokenRepository = pushTokenRepository;
+        this.favoritePlaceService = favoritePlaceService;
+    }
+
+    // Map PushTokenDTO to PushToken
+    private PushToken toPushToken(PushTokenDTO pushTokenDTO) {
+        PushToken pushToken = new PushToken(
+                pushTokenDTO.getUserId(),
+                pushTokenDTO.getGroupId(),
+                pushTokenDTO.getToken()
+        );
+        pushToken.setId(pushTokenDTO.getId());
+        return pushToken;
+    }
+
+
+    public void savePushToken(PushTokenDTO pushTokenDTO) {
+        PushToken pushToken = toPushToken(pushTokenDTO);
+        pushTokenRepository.save(pushToken);
+    }
+
+    public void deletePushToken(String userId) {
+        pushTokenRepository.deleteByUserId(userId);
+    }
+
     public void checkFavoritePlaceProximity(LocationMessage location) {
-        System.out.println("Buscando token para userId: " + location.getUserId());
-        List<FavoritePlace> favoritePlaces = favoritePlaceService.getFavoritePlacesByGroupId(location.getGroupId());
+        List<FavoritePlaceDTO> favoritePlaces = favoritePlaceService.getFavoritePlacesByGroupId(location.getGroupId());
         PushToken userToken = pushTokenRepository.findByUserId(location.getUserId()).orElse(null);
-        System.out.println("Verificando proximidad para usuario " + location.getUserId() + " en grupo " + location.getGroupId() + ", token: " + (userToken != null ? userToken.getToken() : "ninguno"));
 
-        if (userToken == null) return;
+        if (userToken == null) {
+            return;
+        }
 
-        for (FavoritePlace place : favoritePlaces) {
+        for (FavoritePlaceDTO place : favoritePlaces) {
             double distance = calculateDistance(
                     location.getLatitude(), location.getLongitude(),
                     place.getLatitude(), place.getLongitude()
             );
-            System.out.println("Distancia a " + place.getPlaceName() + ": " + distance + " metros (radio: " + place.getRadius() + ")");
 
             boolean isInside = distance <= place.getRadius();
             boolean wasInside = wasUserInsidePlace(location.getUserId(), place.getId());
@@ -76,7 +102,7 @@ public class NotificationService {
         userPlaceStatus.computeIfAbsent(userId, k -> new HashMap<>()).put(placeId, isInside);
     }
 
-    private void sendNotification(String groupId, String userId, FavoritePlace place, String action) {
+    private void sendNotification(String groupId, String userId, FavoritePlaceDTO place, String action) {
         List<PushToken> tokens = pushTokenRepository.findByGroupId(groupId);
         String userName = getUserName(userId);
 
@@ -85,26 +111,27 @@ public class NotificationService {
         for (PushToken token : tokens) {
             if (!token.getUserId().equals(userId)) {
                 try {
-                    URL url = new URL("https://exp.host/--/api/v2/push/send");
-                    HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+                    URI uri = URI.create("https://exp.host/--/api/v2/push/send");
+                    HttpURLConnection conn = (HttpURLConnection) uri.toURL().openConnection();
                     conn.setRequestMethod("POST");
                     conn.setRequestProperty("Content-Type", "application/json");
+                    conn.setRequestProperty("Accept", "application/json");
                     conn.setDoOutput(true);
 
                     String payload = String.format(
-                            "{\"to\": \"%s\", \"title\": \"Movimiento en el grupo\", \"body\": \"%s\"}",
+                            "{\"to\": \"%s\", \"title\": \"Movimiento en el grupo\", \"body\": \"%s\", \"sound\": \"default\"}",
                             token.getToken(), messageBody
                     );
 
                     try (OutputStream os = conn.getOutputStream()) {
-                        byte[] input = payload.getBytes("utf-8");
+                        byte[] input = payload.getBytes(StandardCharsets.UTF_8);
                         os.write(input, 0, input.length);
                     }
 
-                    int responseCode = conn.getResponseCode();
-                    System.out.println("Notificación enviada a " + token.getUserId() + ", código de respuesta: " + responseCode);
+                    conn.getResponseCode();
+
                 } catch (Exception e) {
-                    System.err.println("Error enviando notificación: " + e.getMessage());
+                    e.printStackTrace();
                 }
             }
         }
